--- a/src/StyleSheet.css
+++ b/src/StyleSheet.css
@@ -1,4 +1,45 @@
-.h1 {
-    font-size: 2rem;
+.header1 {
+    font-size: 1.7rem;
     font-weight: bold;
 }
+
+.header2 {
+    font-size: 1.25rem;
+    font-weight: bolder;
+    padding-top: 2vh;
+}
+
+.header3 {
+    font-size: 1.25rem;
+}
+
+.font1 {
+    font-size: 0.85rem;
+    margin-top: 1vh;
+}
+
+.alignFlexStart {
+    align-self: flex-start;
+    text-align: left;
+}
+
+.Display1 {
+    display: flex;
+    flex-direction: column;
+    min-width: 25vw;
+    max-width: 30vw;
+}
+
+.Display2 {
+    display: flex;
+    flex-direction: column;
+    min-width: 20vw;
+    max-width: 25vw;
+    align-self: center;
+}
+
+.input1 {
+    margin-top: 1vh;
+}
+
+
