--- a/src/pages/RoleSelection.css
+++ b/src/pages/RoleSelection.css
@@ -1,10 +1,6 @@
 .RoleSelection {
     display: flex;
-    flex-direction: column;
-    align-items: column;
+    justify-content: center;
 }
 
-.RoleSelection .h1 {
-    font-size: 50;
-}
 
